@@ -1,4 +1,4 @@
-# Copyright (C) 2001-2007 by the Free Software Foundation, Inc.
+# Copyright (C) 2001-2008 by the Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License
@@ -72,6 +72,7 @@ class BounceTest(unittest.TestCase):
         ('SimpleWarning', 'simple_03.txt', Stop),
         ('SimpleWarning', 'simple_21.txt', Stop),
         ('SimpleWarning', 'simple_22.txt', Stop),
+        ('SimpleWarning', 'simple_28.txt', Stop),
         # GroupWise
         ('GroupWise', 'groupwise_01.txt', ['thoff@MAINEX1.ASU.EDU']),
         # This one really sucks 'cause it's text/html.  Just make sure it
