@@ -61,6 +61,8 @@ Here is a history of user visible changes to Mailman.
     - Fixed a problem in Decorate.py that could result in a multipart
       message with no part headers for the original body part (1991348).
 
+    - Added bounce recognition for googlemail delayed warning.
+
   Miscellaneous
 
     - Brad Knowles' mailman daily status report script updated to 0.0.18.
